--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@supabase/supabase-js": "^2.57.2",
     "@tailwindcss/vite": "^4.1.13",
     "autoprefixer": "^10.4.21",
+    "papaparse": "^5.5.3",
     "postcss": "^8.5.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
