--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "papaparse": "^5.5.3",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-router-dom": "^7.9.1",
     "recharts": "^3.2.0"
   },
   "devDependencies": {
